--- a/src/components/Reasons/Reasons.css
+++ b/src/components/Reasons/Reasons.css
@@ -48,7 +48,7 @@
     color: var(--orange);
   }
   .right-r > div {
-    color: #087716;
+    color: #35a944;
     font-size: 3rem;
     font-weight: bold;
   }
