--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -33,7 +33,7 @@
     width: 26rem;
     height: 12rem;
     filter: blur(200px);
-    background: red;
+    background: #35a944;
 }
 .Footer-container>:nth-child(4)
 {
@@ -42,5 +42,5 @@
     width: 26rem;
     height: 12rem;
     filter: blur(200px);
-    background: rgb(255, 115, 0);
+    background: #35a944;
 }
