--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -11,7 +11,7 @@
     gap: 2rem;
   }
   .right-h {
-    background-color: #087716;
+    background-color: #35a944;
     flex: 1;
     position: relative;
   }
@@ -38,7 +38,7 @@
   }
   .the-best-ad > div {
     position: absolute;
-    background-color: #087716;
+    background-color: #35a944;
     width: 5.4rem;
     height: 80%;
     left: 8px;
@@ -53,7 +53,7 @@
     text-transform: uppercase;
     font-size: 4.5rem;
     font-weight: bold;
-    color: #087716;
+    color: #35a944;
     text-overflow: inherit;
   }
   
@@ -74,7 +74,7 @@
     flex-direction: column;
   }
   .figures > div > span:nth-of-type(1) {
-    color: #087716;
+    color: #35a944;
     font-size: 2rem;
   }
   .figures > div > span:nth-of-type(2) {
@@ -93,7 +93,7 @@
     width: 8rem;
   }
   .hero-buttons > :nth-child(2) {
-    color: white;
+    color: #35a944;
     background-color: transparent;
     width: 8rem;
     border: 2px solid var(--orange);
