--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -1,5 +1,6 @@
 .Join {
-    padding: 0 2rem;
+    /* padding: 0 2rem; */
+    margin: 0 2rem;
     display: flex;
     /* justify-content: spac; */
     gap: 10rem;
