--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -35,7 +35,8 @@
     }
     .header-menu{
         flex-direction: column;
-        background-color: var(--appColor);
+        background-color: var(--orange);
         padding: 2rem;
+        color: white;
     }
 }
