--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    padding: 0 2rem;
+    padding: 2rem;
   }
   .programs-header {
     display: flex;
@@ -23,12 +23,13 @@
   .category {
     display: flex;
     flex-direction: column;
-    background-color: #35a944;
     padding: 2rem;
     gap: 1rem;
     color: white;
     flex: 1;
     justify-content: space-between;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
   .category > :nth-child(1) {
     width: 2rem;
@@ -39,8 +40,25 @@
     font-size: 1rem;
     font-weight: bold;
   }
-  .category:nth-child(2n) {
-    background-color: #0b4d14;
+
+  .category:nth-child(1) {
+    background-color: #04380b;
+    /* margin-bottom: 1rem; */
+  }
+  
+  .category:nth-child(2) {
+    background-color: #105f1b;
+    /* margin-bottom: 2rem; */
+  }
+  
+  .category:nth-child(3) {
+    background-color: #0b9c1f;
+    /* margin-bottom: 3rem; */
+  }
+  
+  .category:nth-child(4) {
+    background-color: #35a944;
+    /* margin-bottom: 4rem; */
   }
 
   .category > :nth-child(3) {
