--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -1,5 +1,4 @@
 .Join {
-    /* padding: 0 2rem; */
     margin: 0 2rem;
     display: flex;
     /* justify-content: spac; */
@@ -8,6 +7,7 @@
 .left-j
 {
     color:#35a944;
+    padding: 2rem 0;
     font-size: 3rem;
     font-weight: bold;
     text-transform: uppercase;
