--- a/src/components/Profissionals/Profissionals.css
+++ b/src/components/Profissionals/Profissionals.css
@@ -1,24 +1,23 @@
 .profissionals {
-  /* padding: 0 2rem; */
   display: flex;
-    flex-direction: column;
-    gap: 2rem;
-  }
-  .profissionals .programs-header {
-    display: flex;
-    gap: 5rem;
-    font-weight: bold;
-    font-size: 3rem;
-    justify-content: center;
-    color: #35a944;
-    text-transform: uppercase;
-    font-style: italic;
-    padding: 0 2rem;
-  }
+  flex-direction: column;
+}
+.profissionals .profissionals-header {
+  display: flex;
+  gap: 5rem;
+  font-weight: bold;
+  font-size: 3rem;
+  justify-content: center;
+  color: #35a944;
+  text-transform: uppercase;
+  font-style: italic;
+  padding: 0 2rem;
+}
 
-  .profissionals .seeAllContainer{
-    position: relative;
-    height: 6rem;
+
+.profissionals .seeAllContainer{
+  position: relative;
+    height: 2rem;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -41,98 +40,66 @@
 
   .profissionals .wrapper {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     align-items: center;
     justify-content: center;
     gap: 10px;
-    padding: 1rem 0;
-    overflow: auto;
+    padding: 1rem 15rem;
+    overflow: hidden;
     position: relative;
   }
+
   
-.profissionals .profissional {
-  /* flex: 0 0 24%; */
-  width: 330px;
-  border-radius: 12px;
-  /* opacity: .6; */
-  color: white;
-  box-shadow: 0rem 0rem .8rem rgb(0,0,0,.1);
+  .swiper-pagination{
+  bottom: -10px !important;
+  padding: .5rem;
 }
 
-.profissionals .profissional .picture{
-  width: 100%;
-  height: 300px;
-  border-radius: 12px;
-  background-color: transparent;
+  .swiper-wrapper{
+  padding: 1rem !important;
 }
 
-.profissionals .profissional .picture .characterPicture{
-  width: 100%;
-  height: 100%;
-  border-top-right-radius: 12px;
-  border-top-left-radius: 12px;
-  object-fit: cover;
-  object-position: right;
-  mix-blend-mode: multiply;
+  .swiper{
+  padding: 1rem !important;
 }
 
-.profissionals .profissional .content{
-  /* background-color: #35a944; */
-  padding: 1rem;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  border-bottom-right-radius: 12px;
-  border-bottom-left-radius: 12px;
-  cursor: pointer;
-}
-
-.profissionals .profissional .content h4{
-  opacity: .7;
-  color: #35a944;
-}
-
-.profissionals .profissional .content h4 .characterAge{
-  padding: 0 5px;
-  /* opacity: .9; */
-  font-size: 15px;
-}
-
-.profissionals .profissional .content h3{
-  font-size: 24px;
-  opacity: .8;
-  padding: 10px 0;
-  color: #35a944;
-}
-
-.profissionals .profissional .content .btnSeeProfile:hover{
-  opacity: .8;
-}
-
-.profissionals .profissional .content .btnSeeProfile{
-  background-color: #35a944;
-  color: white;
-  border: none; outline: none;
-  padding: 8px 16px;
-  margin: 0 auto;
-  display: block;
-  border-radius: 6px;
-  cursor: pointer;
+.swiper-pagination-bullet{
+  background-color: #35a944 !important;
+  height: 11px;
+  width: 11px;
 }
 
   @media screen and (max-width: 767px) {
-    .profissionals .programs-header{
+    .profissionals .profissionals-header{
       flex-direction: column;
       gap: 1rem;
       font-size: x-large;
       align-items: center;
       justify-content: center;
-      margin-top: 2rem;
+      /* margin-top: 2rem; */
     }
     .profissionals .wrapper{
-      flex-direction: column;
+      padding: 0; 
     }
   }
+
+  @media screen and (max-width: 1100px) {
   
+  .profissionals .wrapper{
+      padding: 1rem 9rem;
+    }
+  }
+
+  @media screen and (max-width: 981px) {
+  
+  .profissionals .wrapper{
+      padding: 1rem 6rem;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+  
+  .profissionals .wrapper{
+      padding: 1rem 2rem; 
+    }
+  }
