--- a/src/components/PreviewModal/PreviewModal.css
+++ b/src/components/PreviewModal/PreviewModal.css
@@ -1,7 +1,7 @@
 .prevProduct {
     position: fixed;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     z-index: 1;
     top: 0;
     background: rgba(0, 0, 0, .6);
