--- a/src/components/PreviewModal/PreviewModal.css
+++ b/src/components/PreviewModal/PreviewModal.css
@@ -45,6 +45,8 @@
 .prevProduct .container .main .picture{
     width: 45%;
     height: 100%;
+    /* position: sticky; */
+    /* top: 0; left: 0; */
     display: flex;
     align-items: center;
     justify-content: center;
