--- a/src/components/team/styles.css
+++ b/src/components/team/styles.css
@@ -19,7 +19,7 @@
    text-transform: capitalize;
 }
 
-/* *::selection{
+*::selection{
    background-color: var(--main-color);
    color:var(--white);
 }
@@ -43,6 +43,7 @@ html{
    scroll-behavior: smooth;
    scroll-padding-top: 6.5rem;
 }
+   
 
 section{
    padding:3rem 2rem;
@@ -51,7 +52,7 @@ section{
 }
 
 
-*
+
 .heading{
     text-align: center;
     margin-bottom: 3rem;
@@ -95,9 +96,9 @@ section{
  
 @media (max-width:450px){
 
-    html{
+    /* html{
        font-size: 50%;
-    }
+    } */
  
     .heading img{
        height: 3rem;
@@ -111,9 +112,8 @@ section{
 
  @media (max-width:991px){
 
-    html{
+    /* html{
        font-size: 55%;
-    }
+    } */
  
  }
-  */
