--- a/src/components/team/styles.css
+++ b/src/components/team/styles.css
@@ -11,7 +11,7 @@
 
  
 *{
-   font-family: 'Nunito', sans-serif;
+   /* font-family: 'Nunito', sans-serif; */
    margin:0; padding:0;
    box-sizing: border-box;
    outline: none; border:none;
@@ -19,14 +19,9 @@
    text-transform: capitalize;
 }
 
-*::selection{
-   background-color: var(--main-color);
-   color:var(--white);
-}
-
 ::-webkit-scrollbar{
-   height: .5rem;
-   width: 1rem;
+   /* height: .5rem;
+   width: 1rem; */
 }
 
 ::-webkit-scrollbar-track{
