--- a/src/components/team/styles.css
+++ b/src/components/team/styles.css
@@ -41,10 +41,9 @@ html{
 */
    
 
-section{
+.team{
    padding:3rem 2rem;
-   max-width: 1200px;
-   margin:0 auto;
+   
 }
 @media (max-width:768px){
    section{
@@ -59,8 +58,8 @@ section{
  }
  
  .heading img{
-    height: 4rem;
-    margin-bottom: 1rem;
+    /* height: 4rem;
+    margin-bottom: 1rem; */
  }
  
  .heading h3{
@@ -71,10 +70,10 @@ section{
 
  
 .team .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 33rem);
-    gap:1.5rem;
-    justify-content: center;
+   display: grid;
+   grid-template-columns: repeat(auto-fit, 20rem);
+   gap:1.5rem;
+   justify-content: center;
  }
  
  .team .box-container .box{
@@ -84,6 +83,7 @@ section{
  .team .box-container .box img{
     width: 100%;
     height: 350px;
+    border-radius: 12px;
     object-fit: cover;
     margin-bottom: .5rem;
  }
@@ -91,6 +91,7 @@ section{
  .team .box-container .box h3{
     font-size: 2rem;
     color:#35a944;
+    opacity: .7;
  }
  
  
