--- a/src/components/aboutCompany/styles.css
+++ b/src/components/aboutCompany/styles.css
@@ -19,10 +19,11 @@
     width: 100%;
     position: relative;
     overflow: hidden;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 10px;
 }
 
 .aboutCompany::before {
@@ -38,7 +39,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 20px 10px;
 }
 
 .aboutCompany .card .icon {
