--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -4,11 +4,13 @@
 .hero {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    overflow:hidden;
   }
   .left-h {
-    padding: 2rem;
+    padding: 2rem 1rem;
     padding-top: 1.5rem;
-    flex: 3;
+    /* flex: 3; */
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -19,7 +21,7 @@
     position: relative;
   }
   .hero-blur {
-    width: 22rem;
+    width: 20rem;
     height: 30rem;
     left: 0;
   }
@@ -78,7 +80,7 @@
   }
   .figures > div > span:nth-of-type(1) {
     color: #35a944;
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
   .figures > div > span:nth-of-type(2) {
     color: var(--gray);
@@ -100,6 +102,9 @@
     background-color: transparent;
     width: 8rem;
     border: 2px solid var(--orange);
+    display: flex;
+    align-items: center;
+    justify-content: center
   }
   
   /* right side */
@@ -108,6 +113,9 @@
     right: 3rem;
     top: 2rem;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .heart-rate {
@@ -183,7 +191,7 @@
     }
     .hero-blur
     {
-      width: 14rem;
+      width: 12rem;
     }
     .the-best-ad {
       margin-top: 0;
