--- a/src/components/aboutUS/about.css
+++ b/src/components/aboutUS/about.css
@@ -75,12 +75,12 @@ h2 {
 .ambiente-magico .text a {
     display: block;
     max-width: 280px;
-    line-height: 56px;
+    line-height: 34px;
     background-color: #35a944;
     border-radius: 66px;
     text-align: center;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 18px;
     text-align: center;
     color: #fff;
     -webkit-transition: all .3s;
